# DGCC

./: .gitignore  P0.md  P1.md  README.md  STEP_LOG.md  pyproject.toml  sprint_spec.md
.github/: immutables.txt
configs/: collect_random.yaml  compare_sims.yaml  default.yaml  demo_primitive.yaml  gate_g1.yaml  gate_g2.yaml  p1_random_reference.yaml  p1_rollout_demo.yaml  p1_t1_a.yaml  p1_t1_b.yaml  p1_t1_c.yaml  p1_t1a_sprint_smoke.yaml  p1_t2.yaml  p1_t2_smoke1024.yaml  p1_throughput.yaml  p1_throughput_m4.yaml  p1_throughput_m4x.yaml  p1_throughput_m4x_2048.yaml  smoke_dlolab.yaml  smoke_mujoco.yaml  sprint_patching.yaml  sprint_t1a_matched.yaml  sprint_t1a_random.yaml  sprint_t1a_v1.yaml  sprint_t2_bb.yaml  sprint_t2_matched.yaml  sprint_t2_random.yaml  sprint_t2_v1.yaml
docs/: latent_api.md  patching_intervention_proposal.md  sprint_contracts.md
scripts/: appendix_g1_decomposition.py  appendix_repeat_variance.py  appendix_settle_sweep.py  collect_random.py  compare_sims.py  demo_primitive.py  extract_latents.py  g6b_campaign.sh  g6b_run_cycle.sh  gate_g1.py  gate_g2.py  gen_patch_eval.py  gen_sprint_heldout.py  generate_sprint_g6a_report.py  generate_sprint_g6b_report.py  goal_preflight.py  make_p0_report.py  p1_m1_dummy_loop.py  p1_m3_lane.sh  p1_m3_queue.sh  p1_m3r_lane.sh  p1_m3r_report.py  p1_m4_lane.sh  p1_m4_select_ckpt.py  p1_o1_oracle.py  p1_random_reference.py  p1_rollout_demo.py  p1_smoke_judgment.py  p1_sprint_retro_eval.py  p1_sprint_train.py  p1_t1_report.py  p1_t2_heldout_eval.py  p1_t2_val_sample.py  p1_train.py  smoke_dlolab.py  smoke_mujoco.py  sprint_a2_profile.py  sprint_heldout_eval.py  sprint_parity_proof.py  sprint_patch_rollout.py  (+7 more)
tests/: test_a2_profile.py  test_d_shape_eval.py  test_dm_pipeline.py  test_env_stability.py  test_eval_guard_raw.py  test_g6b_report_gen.py  test_goal_distance.py  test_latent_api.py  test_m3r_backbone.py  test_m3r_episode.py  test_m4_repro_fixes.py  test_patch_eval_split.py  test_phi_invariance.py  test_preflight_patch.py  test_primitive.py  test_resample.py  test_rl_units.py  test_roundlog_flag.py  test_schema.py  test_sprint_arms.py  test_sprint_ckpt.py  test_sprint_claims.py  test_sprint_driver.py  test_sprint_parity.py  test_sprint_patch_rollout.py  test_sprint_patching.py  test_sprint_select.py  test_sprint_stats.py  test_stability_recount.py  test_t2_heldout_eval.py  test_tasks.py  test_writer.py
(+209 files in other folders)
