[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dgcc"
version = "0.0.0"
description = "Deformation-Grounded Contact Critic P0 workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "mujoco",
    "pytest",
    "pyyaml",
    "h5py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dgcc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
