[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dgcc"
version = "0.0.0"
description = "Deformation-Grounded Contact Critic P0 workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2.5",
    "scipy",
    "mujoco",
    "pytest",
    "pyyaml",
    "h5py",
    "fsspec<=2026.2.0",
    "packaging<26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dgcc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
